# BA2TradePlatform

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  EXPERTS.md  INVESTIGATION_RUNS_21_22.md  MIGRATION.md  MIGRATIONS.md  README.md  SERVER_PERFORMANCE_FEATURE.md  SETUP_GUIDE.md  TESTPLAN.md  add_balance_tracking_columns.py  add_close_reason_column.py  add_llm_usage_table.py  add_transaction_metadata.py  alembic.ini  ba2-trade-platform.service  check_deployment.py  check_expert_transactions.py  copy_app_settings.py  diagnostic_output.txt  docker-compose.yml  example_time_normalization.py  find_func.py  fix_orders_without_transactions.py  high risk.txt  inspect_func.py  install.ps1  install.sh  main.py  migrate.py  migrate_chromadb_embeddings.py  migrate_model_settings.py  migrate_to_native_providers.py  migrate_transaction_quantity_to_positive.py  minimal_graph.py  nasdaq100-30.txt  pyproject.toml  requirements.txt  (+13 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.nicegui/: storage-user-ea1df785-8aea-4f59-8140-fb63f7f09f24.json
alembic/: env.py
ba2_trade_platform/: cli.py  config.py  logger.py  version.py
docs/: ACCOUNTINTERFACE_IMPORT_FIX.md  ACCOUNT_AUTHENTICATION_IMPROVEMENTS.md  ACCOUNT_CACHE_AND_PL_CALCULATION_FIX.md  ACCOUNT_INSTANCE_SINGLETON_CACHE.md  AGENT_ORDER_ANALYSIS.md  AGENT_PROVIDER_REFACTORING_SUMMARY.md  AGENT_TOOLS_FIX_2025-10-09.md  AI_PROVIDER_REFACTORING.md  ALLOW_CUSTOM_SETTING_FEATURE.md  ALPACA_API_RATE_LIMIT_RETRY_IMPLEMENTATION.md  ALPHA_VANTAGE_SOURCE_TRACKING.md  ALPHA_VANTAGE_SOURCE_TRACKING_SUMMARY.md  (+274 more)
(+1010 files in other folders)
